# tolovnazorat-bot

./: .env.example  .gitignore  .replit  MINI_APP_ARCHITECTURE.md  MINI_APP_SETUP.md  RAILWAY_DEPLOY.md  main.py  migrate_to_postgres.py  pyproject.toml  replit.md  requirements.txt
api/: auth.py  database.py  main.py
api/routes/: admin.py  courses.py  user.py
attached_assets/: Pasted--1-QISM-import-os-import-io-import-re-import-asyncio-imp-1759761373470_1759761373478.txt  Pasted--1-QISM-import-os-import-io-import-re-import-asyncio-imp-1759762899384_1759762899384.txt  Pasted--main-py-import-os-import-io-import-re-import-asyncio-import-logging-from-datetime-import-dat-1759758824730_1759758824736.txt  Pasted-2025-10-13-07-01-22-079-main-INFO-Starting-bot-2025-10-13-07-01-22-102-main-IN-1760340090487_1760340090493.txt  Pasted-O-ZGARISHLAR-1-Bir-martalik-link-yuborganda-u-1-soat-emas-bir-kun-ichida-amal-qilsin-Lkein-l-1759813733161_1759813733162.txt
webapp/: package-lock.json  package.json  vite.config.js
webapp/src/: App.jsx
webapp/src/pages/: Contract.jsx  Courses.jsx  Payment.jsx  Phone.jsx
webapp/src/utils/: api.js  telegram.js
